--- a/benifits.html
+++ b/benifits.html
@@ -47,11 +47,10 @@
 				</header>
 				<div class="container">
 				<section id="content">
-							
-							<h3>Heading One</h3>
-							<p> Stuff about how you don't age if you drink this water</p>
-							<h3>Heading Two</h3>
-							<p>Makes your skin class</p>
+							<p> Collagen is the main structural protein found in the body. It is responsible for maintaining firmness and prevents the skin from sagging and wrinkles. From as young as 25 the natural collagen production in the body begins to decrease. </p>
+							<p> By consuming NÜ you could prevent this from happening to you! NÜ is packed with hydrolysed marine collagen. The collagen is hydrolysed to help the body break it down faster and absorb quickly into the skin leaving your skin plump and wrinkle free! </p>
+							<p>Not only does NÜ contain marine collagen it also contains your RDA of Vitamin C. Vitamin C is essential in the diet. As it helps to promote the body’s natural production of collagen.  Vitamin C is critical for anti-aging. </p>
+							<p>NÜ will give you the confidence in your skin!</p>
 							<a href="#" class="imagefit1"><img src="images/vitC.jpg" alt="" /></a>
 				</section>
 							
