--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
 							<!-- Text -->
 								<section>
 									<p>NÜ collagen enriched flavoured water which works to reduce the signs of ageing and promote plump, healthy, youthful skin. Our products are also fortifid with Vitamin C, the key vitamin responsible for collagen production within the body.
-										And what else? Our drinks are available in three delicious, unique flavours! Raspberry and Pomegranate, Citrus Fruits and Elderflower. Staying beautiful has never been so easy!</p>
+										And what else? Our drinks are available in three delicious, unique flavours! Raspberry and Pomegranate, Citrus Fruits and Elderflower.</p><p> Staying beautiful has never been so easy!</p>
 								</section>
 
 							
@@ -69,7 +69,7 @@
 						<div class="4u 6u(2) 12u$(3)">
 							<article class="box post">
 								<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-								<h3>Lemon and Lime </h3>
+								<h3>Citrus Fruits </h3>
 							</article>
 						</div>
 						<div class="4u 6u$(2) 12u$(3)">
