--- a/about.html
+++ b/about.html
@@ -7,19 +7,12 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery.dropotron.min.js"></script>
-		<script src="js/jquery.scrollgress.min.js"></script>
-		<script src="js/jquery.scrolly.min.js"></script>
-		<script src="js/jquery.slidertron.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/skel-layers.min.js"></script>
-		<script src="js/init.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-xlarge.css" />
-		</noscript>
+		
+		
+		
+		<link rel="stylesheet" href="css/style1.css" />
+		<link rel="stylesheet" href="css/style.css" />
+		
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
@@ -60,33 +53,6 @@
 
 				</div>
 			</section>
-			<section id="main" class="wrapper style1">
-				<div id = "div1" class="container">
-					<header class="major">
-						<h2>Our Flavours</h2>
-					</header>
-					<div class="row">
-						<div class="4u 6u(2) 12u$(3)">
-							<article class="box post">
-								<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-								<h3>Citrus Fruits </h3>
-							</article>
-						</div>
-						<div class="4u 6u$(2) 12u$(3)">
-							<article class="box post">
-								<a href="#" class="image fit"><img src="images/pic08.jpg" alt="" /></a>
-								<h3>Raspberry and Pomegranate</h3>
-							</article>
-						</div>
-						<div class="4u$ 6u(2) 12u$(3)">
-							<article class="box post">
-								<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-								<h3>Elderflower</h3>
-							</article>
-						</div>
-					</div>
-				</div>
-			</section>
 			
 		<section id="main" class="wrapper style1">
 				<div id = "div1" class="container">
@@ -119,6 +85,7 @@
 					</div>
 				</div>
 			</section>
+		</section>
 			
 		<!-- Footer -->
 			<footer id="footer">
