--- a/index.html
+++ b/index.html
@@ -6,20 +6,82 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-	
-		<link rel="stylesheet" href="css/indexStyle.css" />
+		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+		<script src="js/jquery.min.js"></script>
+		<script src="js/jquery.dropotron.min.js"></script>
+		<script src="js/jquery.scrollgress.min.js"></script>
+		<script src="js/jquery.scrolly.min.js"></script>
+		<script src="js/jquery.slidertron.min.js"></script>
+		<script src="js/skel.min.js"></script>
+		<script src="js/skel-layers.min.js"></script>
+		<script src="js/init.js"></script>
+		<noscript>
+			<link rel="stylesheet" href="css/skel.css" />
+			<link rel="stylesheet" href="css/style.css" />
+			<link rel="stylesheet" href="css/style-xlarge.css" />
+		</noscript>
+		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
 	<body class="landing">
+
+		<!-- Header -->
+			<header id="header" class="alt skel-layers-fixed">
+				<h1><a href="index.html">NÜ collagen water</span></a></h1>
+				<nav id="nav">
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="about.html">About</a></li>
+						<li><a href="benifits.html">Benifits</a></li>
+						<li><a href="contacts.html">Contacts</a></li>
+					</ul>
+				</nav>
+			</header>
+
+		<!-- Banner -->
+			<section id="banner">
+				<div class="inner">
+					
+					<ul class="actions">
+						<li><a href="#one" class="button big scrolly">Learn More</a></li>
+					</ul>
+				</div>
+			</section>
+
+		<!-- One -->
+			<section id="one" class="wrapper style1">
+				<div class="container">
+					<header class="major">
+						<h2>Availible in a range of flavours</h2>
+					</header>
+					<div class="slider">
+						<span class="nav-previous"></span>
+						<div class="viewer">
+							<div class="reel">
+								<div class="slide">
+									<img src="images/pic05a.jpg" alt="" />
+								</div>
+								<div class="slide">
+									<img src="images/pic07a.jpg" alt="" />
+								</div>
+								<div class="slide">
+									<img src="images/pic08a.jpg" alt="" />
+								</div>
+							</div>
+						</div>
+						<span class="nav-next"></span>
+					</div>
+				</div>
+			</section>
 			
-			<!-- Footer -->
-			<footer id="footer1">
-				<ul class = "bottomNav">
-					<li><a href="about.html"><span class="label">About</span></a></li>
-					<li><a href="benifits.html"><span class="label">Benefits</span></a></li>
-					<li><a href="contacts.html"><span class="label">Contacts</span></a></li>
+		<!-- Footer -->
+			<footer id="footer">
+				<ul class="icons">
+					<li><a href="https://twitter.com/NUCollagenWater?lang=en" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://www.facebook.com/NUCollagenWater/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="https://www.instagram.com/nucollagenwater/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
 			</footer>
-			
 
 	</body>
 </html>
